--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    dataBinding{
+    dataBinding {
         enabled true
     }
 }
@@ -34,4 +34,7 @@ dependencies {
 
     //HtmlParser
     implementation 'org.jsoup:jsoup:1.12.1'
+
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
